# Schule-Kontoverwaltung

./: CMakeLists.txt  README.md
src/: database.c  main.c  structure.txt  terminal.c  transaction.c  utils.c
src/include/: account.h  auth.h  database.h  terminal.h  transaction.h  utils.h
